--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
 #profile-container{
 	max-width: 300px;
 	background-color: white;
+	margin: 40px auto;
 	border: 1px solid gray;
 	border-radius: 6px;
 
