--- a/style.css
+++ b/style.css
@@ -29,3 +29,21 @@ body{
 #profile-job{
 	text-align: center;
 }
+
+#header{
+	width: 100%;
+	height: 50px;
+	line-height: 50px;
+	background-color: pink;
+	text-align: center;
+}
+
+#footer{
+	width: 100%;
+	height: 50px;
+	position: absolute;
+	bottom: 0;
+	line-height: 50px;
+	background-color: pink;
+	text-align: center;
+}
